--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">PlayListMakerMain</string>
+    <string name="search">Поиск</string>
+    <string name="media">Медиатека</string>
+    <string name="settings">Настройки</string>
+    <string name="title_name">Playlist maker</string>
+    <string name="share">Поделиться приложением</string>
+    <string name="help">Написать в поддержку</string>
+    <string name="documents">Пользовательское соглашение</string>
+    <string name="black_theme">Темная тема</string>
+
 </resources>
