--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
     <string name = "not_found">Ничего не нашлось</string>
     <string name="internet_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="clear_history_button_text">Очистить историю</string>
+    <string name="you_search">Вы искали</string>
 
 </resources>
